--- a/RFIDSampleApp/src/main/res/values/strings.xml
+++ b/RFIDSampleApp/src/main/res/values/strings.xml
@@ -1,7 +1,9 @@
 <resources>
     <string name="app_name">RFIDSample</string>
+    <string name="app_title">RFID Sample</string>
     <string name="action_settings">Settings</string>
     <string name="antenna_settings">Antenna_Settings</string>
     <string name="Singulation_control">Singulation-control</string>
     <string name="Defaults">Defaults</string>
+    <string name="loading_status">Loading Application</string>
 </resources>
