--- a/RFIDSampleApp/src/main/res/values/strings.xml
+++ b/RFIDSampleApp/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">RFIDSample</string>
-    <string name="app_title">RFID Sample</string>
+    <string name="app_name">Inventory</string>
+    <string name="app_title">Inventory Sample</string>
     <string name="action_settings">Settings</string>
     <string name="antenna_settings">Antenna_Settings</string>
     <string name="Singulation_control">Singulation-control</string>
